# rust-window-organizer

./: Cargo.toml
src/: main.rs
